--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@
     color: rgba(255, 255, 255, 1) !important;
     border: 0 !important;
     font-size: unset !important;
+    /* Spacing between messages is set here */
     margin-bottom: 10px;
     animation: 0.3s ease-out slideIn;
     vertical-align: middle;
     position: relative;
 }
+/* This block controls the username and badges */
 .chat_line span:not:last-child {
     position:absolute;
     left: 10px;
@@ -30,29 +32,31 @@
     font-size: 24px;
     font-weight: 700;
 }
+/* This block controls the messages */
 .chat_line span:last-child {
+    background: rgba(0,0,0,0);
     border: 2px solid #43fe39;
     border-radius: 10px 10px 10px 10px;
+    box-sizing: border-box !important;
     color: #fff;
-    background: rgba(0,0,0,0);
-    text-shadow:#000 0px 0px 0px;
-    padding: 20px 18px 15px 18px;
-    border-radius: 10px 10px 10px 10px;
     display: inline-block !important;
     font-family: Roboto;
     font-size: 24px;
-    word-break: break-word !important;
     line-height: 1.25;
-    position: relative;
     min-height: 20px;
-    box-sizing: border-box !important;
+    text-shadow:#000 0px 0px 0px;
+    padding: 20px 18px 15px 18px;
+    position: relative;
+    word-break: break-word !important;
 }
+/* This controls the position, size, and spacing for the user badges */
 .chat_line .tag {
     float: left;
     margin-right:5px;
     width: 24px !important;
     height: 24px !important;
 }
+/* This controls the size and alignment of emojis */
 .chat_line .emoji,
 .chat_line .emoticon {
     vertical-align: middle;
