--- a/style.css
+++ b/style.css
@@ -11,15 +11,12 @@
 }
 .chat_line {
     color: rgba(255, 255, 255, 1) !important;
-    border: 0 !important;
     font-size: unset !important;
-    /* Spacing between messages is set here */
     margin-bottom: 10px;
     animation: 0.3s ease-out slideIn;
     vertical-align: middle;
     position: relative;
 }
-/* This block controls the username and badges */
 .chat_line span:not:last-child {
     position:absolute;
     left: 10px;
@@ -32,31 +29,26 @@
     font-size: 24px;
     font-weight: 700;
 }
-/* This block controls the messages */
 .chat_line span:last-child {
-    background: rgba(17,11,44,0.75);
-    border: 2px solid #43fe39;
-    border-radius: 10px 10px 10px 10px;
-    box-sizing: border-box !important;
     color: #fff;
+    text-shadow:#000 0px 0px 0px;
+    padding: 20px 18px 15px 18px;
+    border-radius: 10px 10px 10px 10px;
     display: inline-block !important;
     font-family: Roboto;
     font-size: 24px;
-    line-height: 1.25;
-    min-height: 20px;
-    text-shadow:#000 0px 0px 0px;
-    padding: 20px 18px 15px 18px;
-    position: relative;
     word-break: break-word !important;
+    line-height: 1.25;
+    position: relative;
+    min-height: 20px;
+    box-sizing: border-box !important;
 }
-/* This controls the position, size, and spacing for the user badges */
 .chat_line .tag {
     float: left;
     margin-right:5px;
     width: 24px !important;
     height: 24px !important;
 }
-/* This controls the size and alignment of emojis */
 .chat_line .emoji,
 .chat_line .emoticon {
     vertical-align: middle;
@@ -75,6 +67,36 @@
     font-weight: 700 !important;
     display: unset !important;
 }
+
+/* WHOLE LINE BOXED */
+.chat_line {
+    border: 2px solid #43fe39;
+    border-radius: 10px 10px 10px 10px;
+    background: rgba(17,44,11,0.75);
+    text-shadow:#000 1px 0px 5px;
+}
+.chat_line .tag:first-child, .chat_line .nick {
+    margin-left:5px;
+}
+.chat_line .tag, .chat_line .nick {
+    margin-top:5px;
+}
+
+
+/* TEXT SHADOW BEHIND NAMES */
+/*.chat_line {
+    border: 0 !important;
+}
+.chat_line span:last-child {
+    border: 2px solid #43fe39;
+    border-radius: 10px 10px 10px 10px;
+    background: rgba(17,11,44,0.75);
+    margin-top: 5px;
+}
+.chat_line span.nick, .chat_line .tag {
+    text-shadow: 1px 0px 4px rgb(17,44,11)
+}*/
+
 @keyframes slideIn {
     from {
         opacity: 0;
