--- a/style.css
+++ b/style.css
@@ -1,102 +1,37 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:700);
-::-webkit-scrollbar {
-    visibility: hidden !important;
+body {
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0px auto;
+    overflow: hidden;
 }
-#chat_box {
-    display: flex !important;
-    justify-content: flex-end !important;
-    flex-direction: column !important;
-    font-size: 24px !important;
-    background: rgba(0,0,0,0);
+:root {
+    --comment-bg-color: rgba(17,44,11,0.75);
+    --comment-color: #FFFFFF;
+    --comment-border-radius: 10px;
+    --comment-font-size: 24px;
+    --author-border-radius: 10px;
+    --author-font-size: 24px;
+    --font-family:  "Roboto", Roboto, serif;
 }
-.chat_line {
-    color: rgba(255, 255, 255, 1) !important;
-    font-size: unset !important;
-    margin-bottom: 10px;
+.hl-content {
     animation: 0.3s ease-out slideIn;
-    vertical-align: middle;
-    position: relative;
+    text-shadow:#000 1px 0px 5px;
 }
-.chat_line span:not:last-child {
-    position:absolute;
-    left: 10px;
-    top: 0;
-    padding: 7px 12px;
-    line-height: 15px;
-    border-radius: 8px;
-    z-index: 1;
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 700;
+.hl-name {
+    padding: 2px 10px !important;
 }
-.chat_line span:last-child {
-    color: #fff;
-    text-shadow:#000 0px 0px 0px;
-    padding: 20px 18px 15px 18px;
-    border-radius: 10px 10px 10px 10px;
-    display: inline-block !important;
-    font-family: Roboto;
-    font-size: 24px;
-    word-break: break-word !important;
-    line-height: 1.25;
-    position: relative;
-    min-height: 20px;
-    box-sizing: border-box !important;
-}
-.chat_line .tag {
-    float: left;
-    margin-right:5px;
-    width: 24px !important;
-    height: 24px !important;
-}
-.chat_line .emoji,
-.chat_line .emoticon {
-    vertical-align: middle;
-    width:24px;
-    height:24px;
-    margin-bottom: 0 !important;
-}
-.chat_line span.nick {
-    float:left;
-    line-height:21px;
-}
-.chat_line span.colon {
-    display: none;
-}
-.chat_line .message {
-    font-weight: 700 !important;
-    display: unset !important;
-}
-
-/* WHOLE LINE BOXED */
-.chat_line {
+.bubble {
     border: 2px solid #43fe39;
     border-radius: 10px 10px 10px 10px;
     background: rgba(17,44,11,0.75);
     text-shadow:#000 1px 0px 5px;
 }
-.chat_line .tag:first-child, .chat_line .nick {
-    margin-left:5px;
-}
-.chat_line .tag, .chat_line .nick {
-    margin-top:5px;
-}
 
-
-/* TEXT SHADOW BEHIND NAMES */
-/*.chat_line {
-    border: 0 !important;
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css?family=Roboto:700');
+    font-style: normal;
+    font-weight: normal;
 }
-.chat_line span:last-child {
-    border: 2px solid #43fe39;
-    border-radius: 10px 10px 10px 10px;
-    background: rgba(17,11,44,0.75);
-    margin-top: 5px;
-}
-.chat_line span.nick, .chat_line .tag {
-    text-shadow: 1px 0px 4px rgb(17,44,11)
-}*/
-
 @keyframes slideIn {
     from {
         opacity: 0;
